--- a/blog/ai-hpc-blog.mdx
+++ b/blog/ai-hpc-blog.mdx
@@ -1,6 +1,6 @@
 ---
 slug: mdx-blog-post
-title: MDX Blog Post
+title: How Supercomputers expedite AI research?
 authors: [slorber]
 tags: [docusaurus]
 ---
