--- a/docs/tutorial-basics/markdown-features.mdx
+++ b/docs/tutorial-basics/markdown-features.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 4
+sidebar_position: 10
 ---
 
-# Markdown Features
+# JupyterLab
 
 Docusaurus supports **[Markdown](https://daringfireball.net/projects/markdown/syntax)** and a few **additional features**.
 
